--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "next": "14.0.1",
+    "node": "^21.1.0",
+    "npm": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0"
